# TangerineTimetree

./: .gitignore  CLAUDE.md  PLAN_PUBLIC_SITE.md  ROADMAP_V2.md  STATUS.md  index.html  package-lock.json  package.json  vite.config.ts  yamaha-recnshare-spec-teardown.md
.claude/: launch.json  settings.local.json
.claude/hooks/: log-nathan-message.sh
.github/workflows/: check.yml
android/: .gitignore  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  debug.keystore  proguard-rules.pro
android/gradle/: libs.versions.toml
base44-export/: SITE_REFERENCE.md
capture/: start-silent.vbs  start.bat  start.ps1
capture/backend/: config.py  main.py  requirements.txt
capture/extension/: background.js  manifest.json  sidepanel.css  sidepanel.html  sidepanel.js
capture/ui/: index.html  package-lock.json  vite.config.ts
cloud-run/: Dockerfile  main.py  requirements.txt
docs/: APP_REVIEW.md  TGT_Project_Overview.html
docs/ai_context/: FEATURE_SPEC_MASTER.md  IMPACT_MAP.md  NATHAN_VERBATIM.md  NATHAN_VERBATIM_SPEC.md  SESSION_LOG.md  SPRINT_PROMPTS.md  STATUS.md  TGT_MEETING_MINUTES.md  WEB_AUDIO_REFERENCE.md  decisions_log.md  gotchas.md  pain_journal.md  schema_map.md  todo.md
mockups/: four-way-comparison.html  library-browser.html  native-mockup.html  player-comparison.html  player-live.html  player-queue.html  practice-redesign.html  responsive-mockup.html  s39-categories-sharing-mockup.html  ux-consolidation.html  v4-mirror-target.html  web-mockup.html
native/: CLAUDE.md  FEATURE_SPEC_PACKAGE_BUILDER.md  app.json  invoice-styles.jsx  metro.config.js  package-lock.json  package.json  themed-invoices-batch1.jsx  tsconfig.json
native/.claude/: settings.local.json
native/android/: build.gradle  settings.gradle
native/app/: _layout.tsx
native/assets/: tgt-logo-b64.txt
native/mockups/: invoiceBoldRock.html  invoiceChristmas.html  invoiceClassic.html  invoiceCleanProfessional.html  (+3 more)
native/modules/click-engine/android/: CMakeLists.txt  build.gradle
native/modules/click-engine/android/src/main/cpp/: audio_engine.cpp  audio_engine.h  beat_detector.h  jni_bridge.cpp  metronome.cpp  metronome.h  mixer.h
native/modules/click-engine/android/src/main/java/com/tgtent/gigbooks/clickengine/: ClickEngineBridge.kt  ClickEngineModule.kt
public/: manifest.json
scripts/: seed_supabase.py
src/: App.css  App.tsx
supabase/: config.toml
web/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
(+590 files in other folders)
